--- a/package.json
+++ b/package.json
@@ -13,12 +13,27 @@
     "url": "https://github.com/nok3zy/Mlbum/issues"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@babel/core": "^7.12.7",
+    "@babel/node": "^7.12.6",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "mssql": "^6.2.3",
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1",
+    "pug": "^3.0.0",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "nodemon": "^2.0.6"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon --exec babel-node app.js --delay 2"
   }
 }
